# aoc23

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh
include/: advent_solver.h  day.h  day1.h  day2.h  day3.h  day4.h  day5.h  day6.h  util.h
include/utils/: advent_solver.h  errors.h  util.h
src/: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  util.cpp
tests/: CMakeLists.txt  day.cpp  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp
